--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "debug": "~2.0.0",
     "ect": "^0.5.9",
     "express": "~4.9.0",
+    "geoip-lite": "^1.3.2",
+    "googleapis": "^33.0.0",
     "jade": "~1.6.0",
+    "js-beautify": "^1.8.6",
     "morgan": "~1.3.0",
     "multer": "^0.1.4",
+    "request": "^2.88.0",
     "serve-favicon": "~2.1.3"
   }
 }
